mongo_stuff/mongo-express/mongo-express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongo-express
  name: mongo-express
  namespace: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
        - image: mongo-express
          imagePullPolicy: Always
          name: mongo-express
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  namespace: mongodb
spec:
  selector:
    app: mongo-express
  ## NodePort for testing directly, LoadBalancer should be used in a prod env. if possible.
  # type: NodePort  
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      # nodePort: 30000
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service-internal
  namespace: mongodb
spec:
  selector:
    app: mongo-express
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
